# lucky-lillia-desktop

./: .gitignore  BUILD.md  ICON.md  MIRROR_USAGE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE.md  __version__.py  app_settings.json  build.bat  config.example.json  demo_about_page.py  demo_config_page.py  demo_main.py  lucky-lillia-desktop.spec  main.py  npm-publish.bat  package.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
.kiro/specs/qq-bot-manager/: design.md  requirements.md  (+1 more)
.kiro/steering/: code-style.md  product.md  structure.md  tech.md
core/: __init__.py  async_app.py  async_log_collector.py  async_monitor.py  config_manager.py  log_collector.py  migration_manager.py  process_manager.py  update_checker.py  update_manager.py  version_detector.py
hooks/: hook-flet.py
tests/: mock_log_generator.py  test_about_page.py  test_config_page.py  test_downloader.py  test_github_api.py  test_home_page.py  test_log_collector.py  test_log_page.py  test_main.py  test_main_window.py  test_mirror_manager.py  test_npm_api.py  test_storage.py  test_theme.py  test_update_checker.py
ui/: __init__.py  about_page.py  animations.py  config_page.py  home_page.py  llbot_config_page.py  llonebot_config_page.py  log_page.py  login_dialog.py  main_window.py  theme.py
utils/: __init__.py  async_http_client.py  async_pmhq_client.py  constants.py  downloader.py  github_api.py  http_client.py  login_service.py  memory_profiler.py  mirror_manager.py  npm_api.py  pmhq_client.py  port.py  qq_path.py  startup_manager.py  storage.py  temp_cleaner.py
