[project]
name = "qq-bot-manager"
version = "1.0.0"
description = "QQ机器人管理器 - 管理和监控QQ机器人相关的后端服务"
requires-python = ">=3.9"
dependencies = [
    "flet>=0.21.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "utils*"]
