[project]
name = "lucky-lillia-desktop"
version = "1.0.0"
description = "幸运莉莉娅，管理 PMHQ 和 LLBot 的桌面客户端"
requires-python = ">=3.9"
dependencies = [
    "flet>=0.21.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "ui*", "utils*"]
